# rippy

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
src/: clipboard.rs  config.rs  daemon.rs  db.rs  hotkey.rs  main.rs  terminal.rs  tui.rs  watcher.rs
