[package]
name = "rippy"
version = "0.1.0"
edition = "2021"
description = "A macOS clipboard history manager CLI"
license = "MIT"
repository = "https://github.com/brianchuang/rippy"
homepage = "https://github.com/brianchuang/rippy"
keywords = ["clipboard", "macos", "tui", "vim"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
ratatui = "0.28"
crossterm = "0.28"
fuzzy-matcher = "0.3"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"] }
